--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="game">Game</string>
     <string name="search">Search</string>
     <string name="favorite">Favorite</string>
+    <string name="imggame">imgGame</string>
 </resources>
