able to fetch user by name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="favorite">Favorite</string>
     <string name="imggame">imgGame</string>
     <string name="place_holder_text">Text Place Holder</string>
+    <string name="information">Description :</string>
 </resources>
