able to add game to db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="imggame">imgGame</string>
     <string name="place_holder_text">Text Place Holder</string>
     <string name="information">Description :</string>
+    <string name="favoritetoggle">favoriteToggle</string>
 </resources>
