refactor the old codebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="place_holder_text">Text Place Holder</string>
     <string name="information">Description :</string>
     <string name="favoritetoggle">favoriteToggle</string>
+    <string name="text_network_error">Please retry your connection</string>
 </resources>
